--- a/index.ipynb
+++ b/index.ipynb
@@ -3949,11 +3949,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "model_rfc = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "model_rfc.fit(X_train_smote, y_train_smote)\n",
+    "predictions_rfc = model_rfc.predict(X_test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.59      0.66      6457\n",
+      "           1       0.17      0.51      0.26       851\n",
+      "           2       0.68      0.63      0.66      4572\n",
+      "\n",
+      "    accuracy                           0.60     11880\n",
+      "   macro avg       0.53      0.58      0.52     11880\n",
+      "weighted avg       0.68      0.60      0.63     11880\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "report3 = classification_report(y_true=y_test,y_pred=predictions_rfc)\n",
+    "print(report3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Micro-Averaged AUC: 0.80\n",
+      "Macro-Averaged AUC: 0.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get predicted probabilities for the test set\n",
+    "probabilities_rfc = model_rfc.predict_proba(X_test_df)\n",
+    "\n",
+    "# Binarize the target variable for AUC calculation\n",
+    "classes = sorted(set(y_test))\n",
+    "y_test_rfc = label_binarize(y_test, classes=classes)\n",
+    "\n",
+    "# Calculate micro- and macro-averaged AUC\n",
+    "micro_auc = roc_auc_score(y_test_rfc, probabilities_rfc, average=\"micro\", multi_class=\"ovr\")\n",
+    "macro_auc = roc_auc_score(y_test_rfc, probabilities_rfc, average=\"macro\", multi_class=\"ovr\")\n",
+    "\n",
+    "print(f\"Micro-Averaged AUC: {micro_auc:.2f}\")\n",
+    "print(f\"Macro-Averaged AUC: {macro_auc:.2f}\")\n"
+   ]
   },
   {
    "cell_type": "code",
