--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,9 @@
     "from sklearn.preprocessing import FunctionTransformer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler, PolynomialFeatures\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report"
    ]
   },
   {
@@ -3969,7 +3971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -3990,14 +3992,9 @@
     }
    ],
    "source": [
-    "report3 = classification_report(y_true=y_test,y_pred=predictions_rfc)\n",
-    "print(report3)"
+    "report_rfc = classification_report(y_true=y_test,y_pred=predictions_rfc)\n",
+    "print(report_rfc)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4027,6 +4024,107 @@
     "\n",
     "print(f\"Micro-Averaged AUC: {micro_auc:.2f}\")\n",
     "print(f\"Macro-Averaged AUC: {macro_auc:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the Decision Tree Classifier\n",
+    "model_dt = DecisionTreeClassifier(criterion=\"gini\", max_depth=5, random_state=42)\n",
+    "\n",
+    "# Fit the model\n",
+    "model_dt.fit(X_train_smote, y_train_smote)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_train_dt = model_dt.predict(X_train_smote)\n",
+    "y_pred_test_dt = model_dt.predict(X_test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.5695553316280392\n",
+      "Test Accuracy: 0.5237373737373737\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model\n",
+    "print(\"Train Accuracy:\", accuracy_score(y_train_smote, y_pred_train_dt))\n",
+    "print(\"Test Accuracy:\", accuracy_score(y_test, y_pred_test_dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.55      0.93      0.69      6457\n",
+      "           1       0.21      0.18      0.19       851\n",
+      "           2       0.37      0.02      0.03      4572\n",
+      "\n",
+      "    accuracy                           0.52     11880\n",
+      "   macro avg       0.38      0.37      0.30     11880\n",
+      "weighted avg       0.46      0.52      0.40     11880\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "report_dt = classification_report(y_true=y_test,y_pred=y_pred_test_dt)\n",
+    "print(report_dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Micro-Averaged AUC: 0.71\n",
+      "Macro-Averaged AUC: 0.57\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Get predicted probabilities for each class\n",
+    "probabilities_dt = model_dt.predict_proba(X_test_df)\n",
+    "\n",
+    "#Binarize the target variable\n",
+    "classes = sorted(set(y_test))  # Get unique classes\n",
+    "y_test_dt = label_binarize(y_test, classes=classes)\n",
+    "\n",
+    "#Compute micro- and macro-averaged AUC\n",
+    "micro_auc = roc_auc_score(y_test_dt, probabilities_dt, average=\"micro\", multi_class=\"ovr\")\n",
+    "macro_auc = roc_auc_score(y_test_dt, probabilities_dt, average=\"macro\", multi_class=\"ovr\")\n",
+    "\n",
+    "print(f\"Micro-Averaged AUC: {micro_auc:.2f}\")\n",
+    "print(f\"Macro-Averaged AUC: {macro_auc:.2f}\")"
    ]
   },
   {
